--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   automuteus:
     # Either:
     # - Use a prebuilt image
-    #image: denverquane/amongusdiscord:${AUTOMUTEUS_TAG:?err}
+    image: denverquane/amongusdiscord:${AUTOMUTEUS_TAG:?err}
     # - Build image from local source
-    build: .
+    #build: .
     # - Build image from github directly
     #build: http://github.com/denverquane/automuteus.git
 
@@ -38,6 +38,7 @@ services:
       - postgres
     volumes:
       - "bot-logs:/app/logs"
+      - "./assets:/src/assets"
   galactus:
     ports:
       # See sample.env for details, but in general, match the GALACTUS_EXTERNAL_PORT w/ the GALACTUS_HOST's port
